# uuid-api-http

./: .gitignore  README.md  app.py  config.env.py  requirements.txt  sample.config.py  setup.cfg
csh_uuid/: __init__.py  ldap.py
csh_uuid_http/: __init__.py  ldap.py
