[metadata]
name = csh_uuid_http
author = Liam Middlebrook
author-email = liammiddlebrook@gmail.com
summary = CSH UUID UID bi-directional converter api
url = "https://github.com/liam-middlebrook/uuid-api-http"
description-file = README.md
license = MIT
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
